<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/shop"
        android:enabled="true"
        android:icon="@drawable/ic_shop"
        android:title="@string/shop"/>
    <item
        android:id="@+id/explore"
        android:enabled="true"
        android:icon="@drawable/ic_explore"
        android:title="@string/explore"/>
    <item
        android:id="@+id/cart"
        android:enabled="true"
        android:icon="@drawable/ic_cart"
        android:title="@string/cart"/>
    <item
        android:id="@+id/favourite"
        android:enabled="true"
        android:icon="@drawable/ic_favourite"
        android:title="@string/favourite"/>
    <item
        android:id="@+id/account"
        android:enabled="true"
        android:icon="@drawable/ic_account"
        android:title="@string/account"/>
</menu>