<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signin"
    android:background="@color/white">

    <ImageView
        android:id="@+id/signInImg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="38dp"
        android:src="@mipmap/ic_signin_image_foreground" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextPhone"
        android:layout_alignParentStart="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="48dp"
        android:text="@string/get_your_handicraft_s_item_with_handicraft_galaxy"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="247dp"
        android:inputType="phone"
        android:clickable="true"
        android:text="@string/_91"
        android:textColor="@color/black"
        android:focusable="true" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:layout_above="@id/btnGoogle"
        android:text="@string/or_sign_in_with_google"
        android:textColor="#666666" />

    <Button
        android:id="@+id/btnGoogle"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="50sp"
        android:layout_marginBottom="70dp"
        android:backgroundTint="@color/purple_pk"
        android:drawableLeft="@drawable/ic_google"
        android:text="@string/continue_with_google"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:cornerRadius="10dp" />


</RelativeLayout>