<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".Welcome">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="1000dp"
        android:layout_height="match_parent"
        android:layout_marginStart="-50dp"
        android:layout_marginEnd="-50dp"
        android:layout_marginTop="-350dp"
        app:srcCompat="@mipmap/ic_motitoran_welcome_foreground" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_centerInParent="true"
        app:srcCompat="@drawable/pk_logo" />

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="50sp"
        android:layout_marginBottom="180dp"
        android:text="@string/welcome_to_nhandicraft_galaxy"
        android:textAlignment="center"
        android:textColor="#E54343"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="150dp"
        android:text="@string/get_your_favourites_at_your_doorstop"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnGetStarted"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="50sp"
        android:layout_marginBottom="70dp"
        android:backgroundTint="@color/purple_pk"
        android:text="@string/get_started"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:cornerRadius="10dp" />

</RelativeLayout>