<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home"
    android:weightSum="3"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginHorizontal="10dp"
        app:boxBackgroundColor="@color/search_bar"
        app:boxBackgroundMode="filled"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_search_24"
        app:startIconTint="@color/black">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtSearchBox"
            android:hint="@string/search_store"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/exclusive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="5dp"
                android:weightSum="50">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="47"
                    android:text="@string/exclusive_offer"
                    android:textColor="@color/black"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/see_all"
                    android:textColor="@color/purple_pk"
                    android:textSize="14sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ExclusiveOffer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/exclusive"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/bestselling"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ExclusiveOffer"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="5dp"
                android:weightSum="50">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="47"
                    android:text="@string/best_selling"
                    android:textColor="@color/black"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/see_all"
                    android:textColor="@color/purple_pk"
                    android:textSize="14sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/BestSelling"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bestselling"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/woolenproducts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/BestSelling"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="5dp"
                android:weightSum="50">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="47"
                    android:text="@string/woolen_products"
                    android:textColor="@color/black"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/see_all"
                    android:textColor="@color/purple_pk"
                    android:textSize="14sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/WoolenProducts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/woolenproducts"/>

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_weight="1"
        app:backgroundTint="@color/search_bar"
        app:menu="@menu/bottom_navigation_menu" />

</LinearLayout>